--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,13 @@
-sonar.projectName=macos-xcode-gh-actions-sc
-sonar.projectKey=sonarsource-cfamily-examples_macos-xcode-gh-actions-sc
-sonar.organization=sonarsource-cfamily-examples
-sonar.projectVersion=1.0
+sonar.projectKey=enzo-pellegrini_macos-xcode-gh-actions-sc
+sonar.organization=enzopellegrini
 
-# =====================================================
-#   Properties that will be shared amongst all modules
-# =====================================================
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=macos-xcode-gh-actions-sc
+#sonar.projectVersion=1.0
 
-# SQ standard properties
-sonar.sources=src
-sonar.sourceEncoding=UTF-8
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
